--- a/.github/workflows/main_app-002-gen10-step3-1-node-oshima48.yml
+++ b/.github/workflows/main_app-002-gen10-step3-1-node-oshima48.yml
@@ -24,10 +24,22 @@ jobs:
           node-version: '22.x'
 
       - name: npm install, build, and test
+       #1
+        env:
+          NEXT_PUBLIC_API_ENDPOINT: ${{ secrets.NEXT_PUBLIC_API_ENDPOINT }}
         run: |
           npm install
           npm run build --if-present
           npm run test --if-present
+       #2
+      - name: Copy artifact for deployment job
+        run: |
+          mkdir deploy
+          cp -r ./.next/standalone/. ./deploy
+          cp -r ./.next/static/. ./deploy/.next/static
+
+      - name: Zip artifact for deployment
+        run: zip release.zip ./deploy -r #3
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -51,5 +63,5 @@ jobs:
         with:
           app-name: 'app-002-gen10-step3-1-node-oshima48'
           slot-name: 'Production'
-          package: .
+          package: ./deploy #4
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_515CFCD33A3A48289F543191FE75A46B }}
